style.css
/* ===================================
   Road to Recovery
   Faithful recreation of the 2013 site
   =================================== */

/* Reset */
*, *::before, *::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

/* Theme Styles */
body {
  text-shadow: none;
  background: #fff;
  padding: 0;
}

a {
  text-decoration: none;
  color: #000;
}

a:hover {
  text-decoration: none !important;
  color: #ADD626 !important;
}

p {
  font-size: 18px;
  line-height: 34px;
  font-family: "Georgia", serif;
  margin-bottom: 38px;
}

img {
  max-width: 100%;
  height: auto;
}

/* Container - 960px max like Bootstrap 2 */
.container {
  max-width: 960px;
  margin: 0 auto;
  padding: 0 20px;
}

.span12 {
  width: 100%;
}

/* Color Swatches */
.col-white {
  color: #fff !important;
}
.col-black {
  color: #000 !important;
}
.col-red {
  color: #D82546;
}
.col-green {
  color: #26B1AA;
}
.col-blue {
  color: #64B2D6;
}

/* Selection color */
::selection {
  background: #ADD626;
  color: #000;
  text-shadow: none;
}
::-moz-selection {
  background: #ADD626;
  color: #000;
  text-shadow: none;
}

/* ===================================
   Navigation Header
   =================================== */
.masthead {
  background: #fff;
  width: 100%;
  height: 50px;
  position: fixed;
  padding-top: 14px;
  right: 0px;
  z-index: 100 !important;
  text-align: center;
}

.desktop-nav {
  padding: 0;
  margin: 0;
  list-style: none;
  display: flex;
  justify-content: center;
  gap: 0;
}

.links a {
  font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
  font-size: 14px;
  font-weight: normal;
  width: 115px;
  margin-left: 10px;
  margin-right: 10px;
  padding-bottom: 5px;
  border-bottom: solid 1px #000;
  text-transform: uppercase;
  display: inline-block;
  text-align: center;
}

.links a:hover {
  border-bottom-color: #ADD626;
}

/* ===================================
   Page Sections
   =================================== */
.page {
  padding-top: 0;
  margin: 0;
  overflow: hidden;
}

/* Hero + Intro Section (Contact) */
#contact {
  background: #d48120;
  background-image: url('images/NerveRoad_HeroBackground.jpg');
  background-size: cover;
  background-position: center;
  padding: 164px 0 80px;
  min-height: 100vh;
}

/* Intro text - right-aligned within hero */
.intro-text {
  max-width: 560px;
  margin-left: auto;
  margin-right: 0;
  padding-top: 40px;
  text-align: justify;
}

.intro-text p {
  color: #fff;
  text-shadow: 1px 1px 2px rgba(90, 55, 20, 0.45);
  margin-bottom: 16px;
}


/* Neurons Section (About) */
#neurons.page {
  background: #5048a2;
}

#about {
  background: #5048a2;
  padding: 96px 0;
}


/* Hand Transplant (Features) */
#features {
  background: #d7f1e9;
  padding: 96px 0;
}

/* Peripheral Nerve Regen (Portfolio) */
#portfolio {
  background: #062130;
  padding: 96px 0;
}

#portfolio p {
  color: #7a9bb5;
}

#portfolio .sub-heading-three {
  opacity: 1;
  text-align: center;
}

#portfolio .image-block {
  margin-bottom: 50px;
}

#portfolio .portfolio-text {
  max-width: 560px;
  margin-left: auto;
  margin-right: auto;
  text-align: justify;
}

#portfolio .def-link {
  color: #b93435 !important;
}

#portfolio .def-link:hover {
  color: #ADD626 !important;
}

#reintegration-inner {
  background: #fff;
  padding: 96px 0;
}

#reintegration .span12 {
  max-width: 720px;
  margin: 0 auto;
}

#reintegration .def-link {
  color: #be174d !important;
}

#reintegration .def-link:hover {
  color: #ADD626 !important;
}

.features-link:hover {
  color: #ADD626 !important;
}

/* Rehabilitation */
#rehabilitation {
  background: #cfeffb;
  padding: 96px 0;
}

#rehabilitation .span12 {
  max-width: 768px;
  margin: 0 auto;
}

#rehabilitation p {
  color: #27297f;
}

#rehabilitation .sub-heading-six {
  color: #ed145b;
}

#rehabilitation .def-link {
  color: #ed145b !important;
}

#rehabilitation .def-link:hover {
  color: #ADD626 !important;
}

/* Glossary */
#glossary {
  background: #2e3192;
  padding: 96px 0;
}

/* ===================================
   Headings
   =================================== */
.main-heading-two {
  font-family: "Georgia", serif;
  text-align: left;
  font-weight: normal;
  font-size: 84px;
  line-height: 84px;
  color: #ffffff;
  text-shadow: 1px 1px 2px rgba(90, 55, 20, 0.45);
  padding-left: 64px;
}

.main-heading-three {
  font-family: "Georgia", serif;
  text-align: left;
  font-weight: normal;
  font-size: 60px;
  line-height: 84px;
  color: #ffffff;
}

.main-heading-four {
  font-family: "Georgia", serif;
  text-align: left;
  font-weight: normal;
  font-size: 60px;
  line-height: 80px;
  color: #336699;
}

.main-heading-five {
  font-family: "Georgia", serif;
  text-align: left;
  font-weight: normal;
  font-size: 60px;
  line-height: 80px;
  color: #000000;
}

.main-heading-six {
  font-family: "Georgia", serif;
  text-align: left;
  font-weight: normal;
  font-size: 60px;
  line-height: 80px;
  color: #27297f;
}

.main-heading-seven {
  font-family: "Georgia", serif;
  text-align: left;
  font-weight: normal;
  font-size: 60px;
  line-height: 84px;
  color: #ffffff;
  text-shadow: 2px 2px 2px #0d004c;
}

/* ===================================
   Sub-headings
   =================================== */
.sub-heading {
  text-align: left;
  font-family: "Georgia", serif;
  font-style: italic;
  color: #ffde46;
  text-shadow: 1px 1px 2px rgba(90, 55, 20, 0.45);
  font-size: 28px;
  line-height: 39px;
  font-weight: normal;
  padding-top: 15px;
  padding-bottom: 5px;
  padding-left: 64px;
}

.sub-heading-one {
  text-align: left;
  font-family: "Georgia", serif;
  font-style: italic;
  color: #a69aff;
  font-size: 26px;
  line-height: 28px;
  font-weight: normal;
  padding-top: 15px;
  padding-bottom: 20px;
}
/* ... */

